2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_launch_player):
	* src/totem-statusbar.c (totem_statusbar_class_init):
	Remove code that supports older versions of GTK+

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_update_menu): Don't put the "Open with Movie
	Player" menu item at the very top of the contextual menu,
	people press it by accident (Closes: #516703)

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPControls.cpp:
	* browser-plugin/totemGMPPlayer.cpp: A few fixes pointed out
	by Christian Persch <chpe@gnome.org> (Helps: #547659)

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPControls.cpp:
	* browser-plugin/totemGMPPlayer.cpp:
	* browser-plugin/totemGMPPlayer.h:
	* browser-plugin/totemPlugin.cpp: Add support for Player.playState
	and Controls.isAvailable in the GMP plugin (Helps: #547659)

2008-08-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/plugins/pythonconsole/pythonconsole.py (show_console):
	Only mark the actual printed string for translation, not the whole
	python statement for eval (Closes: #548004)

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (entry_parsed):
	Fix accessing a freed string, the metadata hashtable from
	the playlist parser returns const data, which we need to
	duplicate

2008-08-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Add ATSC support for gstreamer dvb.

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
	When we have a streaming title, pass it on using the TITLE_CHANGE
	signal. Fixes stream title not updating for soma.fm streams
	(Closes: #471233)

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bvw-test.c (on_got_metadata), (on_title_changed),