@@ -2675,14 +2675,10 @@ bacon_video_widget_open_with_subtitle (BaconVideoWidget * bvw,
     bvw->com->mrl = g_filename_to_uri (path, NULL, NULL);
     g_free (path);
   } else {
-    bvw->com->mrl = g_file_get_uri (file);
+    bvw->com->mrl = g_strdup (mrl);
   }
 
   g_object_unref (file);
-
-  /* No path? Choke on your errors already! */
-  if (bvw->com->mrl == NULL)
-    bvw->com->mrl = g_strdup (mrl);
 
   if (g_str_has_prefix (mrl, "icy:") != FALSE) {
     /* Handle "icy://" URLs from QuickTime */
